--- a/app/src/main/res/layout/activity_buy_token.xml
+++ b/app/src/main/res/layout/activity_buy_token.xml
@@ -79,7 +79,7 @@
                         android:id="@+id/imgBankIcon"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
+                        android:layout_marginTop="@dimen/_5sdp"
                         android:src="@drawable/ic_bankactive" />
 
                     <LinearLayout
@@ -130,10 +130,9 @@
 
                         <TextView
                             android:id="@+id/tvBankName"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
-                            android:layout_weight="0.6"
                             android:fontFamily="@font/opensans_semibold"
                             android:singleLine="true"
                             android:text="Bank of America"
@@ -142,10 +141,9 @@
 
                         <TextView
                             android:id="@+id/tvBAccNumber"
-                            android:layout_width="match_parent"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/_5sdp"
-                            android:layout_weight="1.4"
                             android:fontFamily="@font/opensans_semibold"
                             android:text="••••5359"
                             android:textColor="@color/primary_black"
@@ -158,7 +156,6 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/lyCDetails"
                         android:layout_marginLeft="@dimen/_10sdp"
-                        android:layout_marginTop="@dimen/_2sdp"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:layout_toLeftOf="@+id/imgArrow"
                         android:layout_toRightOf="@+id/imgBankIcon"
@@ -172,7 +169,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
+                        android:layout_marginTop="@dimen/_10sdp"
                         android:layout_marginRight="@dimen/_10sdp"
                         android:src="@drawable/ic_chevron_right" />
                 </RelativeLayout>
@@ -232,10 +229,10 @@
                                 android:fontFamily="@font/opensans_bold"
                                 android:gravity="center_vertical|right"
                                 android:hint="0.00"
-                                android:textColorHint="@color/light_gray"
                                 android:inputType="numberDecimal"
                                 android:maxLength="@string/maxlength"
                                 android:textColor="@color/primary_black"
+                                android:textColorHint="@color/light_gray"
                                 android:textCursorDrawable="@drawable/cursorcolor"
                                 android:textSize="@dimen/_53ssp" />
 
