--- a/app/src/main/res/layout/activity_add_benificial_owner.xml
+++ b/app/src/main/res/layout/activity_add_benificial_owner.xml
@@ -4,139 +4,140 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     android:orientation="vertical"
-    >
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="none"
-        >
+        android:scrollbars="none">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingLeft="@dimen/_21sdp"
-            android:paddingRight="@dimen/_21sdp"
-            >
+            android:paddingRight="@dimen/_21sdp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginTop="@dimen/_44sdp"
-                android:layout_marginBottom="@dimen/_18sdp">
+                android:layout_marginBottom="@dimen/_18sdp"
+                android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/closeIV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_x"
                     android:layout_marginRight="@dimen/_10sdp"
-                    />
+                    android:src="@drawable/ic_x" />
+
                 <View
                     android:layout_width="@dimen/_107sdp"
                     android:layout_height="@dimen/_3sdp"
-                    android:layout_weight="1"
                     android:layout_marginTop="@dimen/_6sdp"
-                    android:background="@drawable/view_primary_gren_color"
                     android:layout_marginRight="@dimen/_5sdp"
-                    />
+                    android:layout_weight="1"
+                    android:background="@drawable/view_primary_gren_color" />
+
                 <View
                     android:layout_width="@dimen/_107sdp"
                     android:layout_height="@dimen/_3sdp"
-                    android:layout_weight="1"
                     android:layout_marginTop="@dimen/_6sdp"
-                    android:background="@drawable/view_light_color"
                     android:layout_marginRight="@dimen/_5sdp"
-                    />
+                    android:layout_weight="1"
+                    android:background="@drawable/view_light_color" />
 
 
             </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_16ssp"
-                android:textColor="@color/black"
                 android:layout_marginBottom="@dimen/_21sdp"
                 android:fontFamily="@font/opensans_bold"
                 android:text="Add Beneficial Owner"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp"/>
 
-                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Upload ID and fill out your information"
-                android:textSize="@dimen/_12ssp"
-                android:fontFamily="@font/opensans_semibold"
-                android:textColor="@color/primary_green"
                 android:layout_marginBottom="@dimen/_11sdp"
-                />
+                android:fontFamily="@font/opensans_semibold"
+                android:text="Upload ID and fill out your information"
+                android:textColor="@color/primary_green"
+                android:textSize="@dimen/_12ssp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_white_color_light_border"
                 android:orientation="horizontal"
                 android:paddingTop="@dimen/_11sdp"
-                android:paddingBottom="@dimen/_11sdp"
-                android:background="@drawable/bg_white_color_light_border"
-                >
+                android:paddingBottom="@dimen/_11sdp">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_upload_id"
                     android:layout_marginLeft="@dimen/_8sdp"
                     android:layout_marginRight="@dimen/_5sdp"
-                    />
+                    android:src="@drawable/ic_upload_id" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
                     android:text="Upload and Scan ID: Driver’s License,\nState-Issued ID, or Passport."
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_10ssp"
-                    android:fontFamily="@font/opensans_regular"
-                    />
+                    android:textSize="@dimen/_10ssp" />
+
                 <ImageView
                     android:id="@+id/completeIV"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2.9"
                     android:layout_marginTop="@dimen/_2sdp"
-                    android:src="@drawable/ic_complete"
+                    android:layout_weight="2.9"
                     android:gravity="right"
-                    android:visibility="gone"
-                    />
+                    android:src="@drawable/ic_complete"
+                    android:visibility="gone" />
 
             </LinearLayout>
+
             <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/fnameTIL"
-                    style="@style/TextInputLayout.OutlinedBox"
+                android:id="@+id/fnameTIL"
+                style="@style/TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_14sdp"
+                android:hint="First Name"
+                android:textColorHint="@color/light_gray"
+                app:boxStrokeColor="@color/primary_green"
+                app:errorIconDrawable="@null"
+                app:hintTextColor="@color/primary_green">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/fnameET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_14sdp"
-                    android:hint="First Name"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:imeOptions="actionNext"
+                    android:inputType="text|textNoSuggestions"
+                    android:maxLength="30"
+                    android:maxLines="1"
+                    android:padding="@dimen/_14sdp"
+                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                    android:singleLine="true"
+                    android:textColor="@color/text_color"
                     android:textColorHint="@color/light_gray"
-                    app:boxStrokeColor="@color/primary_green"
-                    app:errorIconDrawable="@null"
-                    app:hintTextColor="@color/primary_green">
+                    android:textCursorDrawable="@drawable/cursor_color"
+                    android:textIsSelectable="false"
+                    android:textSize="@dimen/_11ssp" />
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/fnameET"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:imeOptions="actionNext"
-                        android:inputType="text|textNoSuggestions"
-                        android:maxLength="30"
-                        android:maxLines="1"
-                        android:padding="@dimen/_14sdp"
-                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                        android:singleLine="true"
-                        android:textColor="@color/text_color"
-                        android:textColorHint="@color/light_gray"
-                        android:textCursorDrawable="@drawable/cursor_color"
-                        android:textIsSelectable="false"
-                        android:textSize="@dimen/_11ssp" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-                </com.google.android.material.textfield.TextInputLayout>
             <LinearLayout
                 android:id="@+id/fnameErrorLL"
                 android:layout_width="match_parent"
@@ -193,6 +194,7 @@
                     android:textSize="@dimen/_11ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <LinearLayout
                 android:id="@+id/lnameErrorLL"
                 android:layout_width="match_parent"
@@ -223,54 +225,55 @@
                 android:layout_marginTop="@dimen/_14sdp"
                 android:visibility="visible">
 
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:src="@drawable/ic_down"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/dobTIL"
-                app:layout_constraintHorizontal_bias="0.952"
-                app:layout_constraintStart_toStartOf="@+id/dobTIL"
-                app:layout_constraintTop_toTopOf="@+id/dobTIL"
-                app:layout_constraintVertical_bias="0.507"
-                app:layout_editor_absoluteX="336.24dp"
-                app:layout_editor_absoluteY="26.28dp" />
+                <ImageButton
+                    android:id="@+id/imageButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:src="@drawable/ic_down"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/dobTIL"
+                    app:layout_constraintHorizontal_bias="0.952"
+                    app:layout_constraintStart_toStartOf="@+id/dobTIL"
+                    app:layout_constraintTop_toTopOf="@+id/dobTIL"
+                    app:layout_constraintVertical_bias="0.507"
+                    app:layout_editor_absoluteX="336.24dp"
+                    app:layout_editor_absoluteY="26.28dp" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/dobTIL"
-                style="@style/TextInputLayout.OutlinedBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/_14sdp"
-                android:hint="Date of Birth"
-                android:textColorHint="@color/light_gray"
-                app:boxStrokeColor="@color/primary_green"
-                app:errorIconDrawable="@null"
-                app:hintTextColor="@color/primary_green"
-                tools:ignore="MissingConstraints">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/dobET"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/dobTIL"
+                    style="@style/TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
-                    android:fontFamily="@font/opensans_semibold"
-                    android:imeOptions="actionNext"
-                    android:inputType="text|textNoSuggestions"
-                    android:maxLength="30"
-                    android:maxLines="1"
-                    android:padding="@dimen/_14sdp"
-                    android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
-                    android:singleLine="true"
-                    android:textColor="@color/text_color"
+                    android:layout_marginBottom="@dimen/_14sdp"
+                    android:hint="Date of Birth"
                     android:textColorHint="@color/light_gray"
-                    android:textCursorDrawable="@drawable/cursor_color"
-                    android:textIsSelectable="false"
-                    android:textSize="@dimen/_11ssp" />
+                    app:boxStrokeColor="@color/primary_green"
+                    app:errorIconDrawable="@null"
+                    app:hintTextColor="@color/primary_green"
+                    tools:ignore="MissingConstraints">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/dobET"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:imeOptions="actionNext"
+                        android:inputType="text|textNoSuggestions"
+                        android:maxLength="30"
+                        android:maxLines="1"
+                        android:padding="@dimen/_14sdp"
+                        android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
+                        android:singleLine="true"
+                        android:textColor="@color/text_color"
+                        android:textColorHint="@color/light_gray"
+                        android:textCursorDrawable="@drawable/cursor_color"
+                        android:textIsSelectable="false"
+                        android:textSize="@dimen/_11ssp" />
                 </com.google.android.material.textfield.TextInputLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
+
             <LinearLayout
                 android:id="@+id/dobErrorLL"
                 android:layout_width="match_parent"
@@ -326,6 +329,7 @@
                     android:textSize="@dimen/_11ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <LinearLayout
                 android:id="@+id/ssnErrorLL"
                 android:layout_width="match_parent"
@@ -381,6 +385,7 @@
                     android:textSize="@dimen/_11ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
             <LinearLayout
                 android:id="@+id/ownershipErrorLL"
                 android:layout_width="match_parent"
@@ -410,10 +415,9 @@
                 android:id="@+id/nextcv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/inactive_color"
-                app:cardCornerRadius="@dimen/_33sdp"
                 android:layout_marginTop="@dimen/_36sdp"
-                >
+                app:cardBackgroundColor="@color/inactive_color"
+                app:cardCornerRadius="@dimen/_33sdp">
 
                 <TextView
                     android:layout_width="match_parent"
@@ -426,17 +430,17 @@
                     android:textColor="@color/white"
                     android:textSize="@dimen/_12ssp" />
             </androidx.cardview.widget.CardView>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Saved automatically"
-                android:textSize="@dimen/_11ssp"
-                android:textColor="@color/dark_grey"
-                android:fontFamily="@font/opensans_regular"
-                android:layout_marginTop="@dimen/_5sdp"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/_5sdp"
                 android:layout_marginBottom="@dimen/_39sdp"
-                />
+                android:fontFamily="@font/opensans_regular"
+                android:text="Saved automatically"
+                android:textColor="@color/dark_grey"
+                android:textSize="@dimen/_11ssp" />
 
         </LinearLayout>
     </ScrollView>
