--- a/app/src/main/res/layout/activity_team_member.xml
+++ b/app/src/main/res/layout/activity_team_member.xml
@@ -4,41 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/et_bg_gray"
-    tools:context=".view.business.DBAInfoDetails">
+    android:orientation="vertical"
+    tools:context=".view.business.TeamMember">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_16sdp"
         android:background="@drawable/bottomradius"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/_21sdp"
-        android:paddingTop="@dimen/_45sdp"
-        android:paddingBottom="@dimen/_11sdp">
+        android:paddingLeft="@dimen/_21sdp"
+        android:paddingTop="@dimen/_20sdp">
 
         <LinearLayout
-            android:id="@+id/CloseLL"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="@dimen/_44sdp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_chevron_left" />
+                android:src="@drawable/ic_back" />
         </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_14sdp"
-            android:fontFamily="@font/opensans_bold"
-            android:text="DBA Information "
-            android:textColor="@color/black"
-            android:textSize="@dimen/_16ssp" />
-
-    </LinearLayout>
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:fontFamily="@font/opensans_semibold"
+            android:text="Team"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_11ssp" />
+    </RelativeLayout>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -51,28 +52,27 @@
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_11sdp"
+                android:layout_marginTop="@dimen/_21sdp"
                 android:layout_marginEnd="@dimen/_11sdp"
-                android:layout_marginTop="@dimen/_4sdp"
                 android:layout_marginBottom="@dimen/_14sdp"
                 app:cardCornerRadius="@dimen/_10sdp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingStart="@dimen/_11sdp"
-                    android:background="@drawable/dba_backimg"
-                    android:paddingEnd="@dimen/_11sdp">
+                    android:layout_marginStart="@dimen/_11sdp"
+                    android:layout_marginTop="@dimen/_17sdp"
+                    android:layout_marginEnd="@dimen/_11sdp"
+                    android:layout_marginBottom="@dimen/_22sdp"
+                    android:orientation="horizontal">
 
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="@dimen/_22sdp"
-                        android:layout_marginBottom="@dimen/_9sdp">
+                        android:layout_marginStart="@dimen/_10sdp">
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:id="@+id/linearLayout"
@@ -91,7 +91,7 @@
                                 android:layout_height="@dimen/_47sdp"
                                 android:layout_alignParentRight="true"
                                 android:layout_gravity="center"
-                                app:cardBackgroundColor="@color/white"
+                                app:cardBackgroundColor="@color/primary_green"
                                 app:cardCornerRadius="@dimen/_24sdp"
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintEnd_toEndOf="parent"
@@ -102,19 +102,17 @@
                                     android:id="@+id/userProfileIV"
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:scaleType="fitXY"
-                                    android:visibility="visible" />
-
+                                    android:visibility="visible"
+                                    android:scaleType="fitXY" />
                                 <TextView
                                     android:id="@+id/imageTextTV"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
-                                    android:fontFamily="@font/opensans_bold"
-                                    android:text="VT"
-                                    android:textColor="@color/primary_black"
+                                    android:text="AL"
                                     android:textSize="@dimen/_20sdp"
-                                    android:visibility="gone" />
+                                    android:fontFamily="@font/opensans_bold"
+                                    android:textColor="@color/white"/>
                             </androidx.cardview.widget.CardView>
 
 
@@ -122,58 +120,49 @@
 
                         <ImageView
                             android:id="@+id/editProfileIV"
-                            android:layout_width="@dimen/_17sdp"
-                            android:layout_height="@dimen/_17sdp"
-                            android:src="@drawable/ic_editicon"
+                            android:layout_width="@dimen/_10sdp"
+                            android:layout_height="@dimen/_10sdp"
+                            android:background="@drawable/pending_dot"
                             app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                             app:layout_constraintEnd_toEndOf="@+id/linearLayout" />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginBottom="@dimen/_6sdp"
-                        android:fontFamily="@font/opensans_bold"
-                        android:text="Fire BBQ"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_24ssp" />
-
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_gravity="center"
-                        >
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/ic_x"
-                            />
+                        android:layout_marginStart="@dimen/_11sdp"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/_3sdp"
                             android:fontFamily="@font/opensans_semibold"
-                            android:text="www.firebbq.com"
+                            android:text="Alison L"
                             android:textColor="@color/primary_black"
                             android:textSize="@dimen/_12ssp" />
 
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_6sdp"
+                            android:fontFamily="@font/opensans_regular"
+                            android:text="Administrator"
+                            android:textColor="@color/primary_black"
+                            android:textSize="@dimen/_12ssp" />
                     </LinearLayout>
 
                     <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:background="@drawable/bg_core_f2f5f8"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:paddingStart="@dimen/_10sdp"
-                        android:paddingTop="@dimen/_4sdp"
-                        android:paddingEnd="@dimen/_9sdp"
-                        android:text="Restaurants"
-                        android:textColor="@color/primary_black"
-                        android:textSize="@dimen/_12ssp" />
+                        android:layout_width="@dimen/_68sdp"
+                        android:layout_height="@dimen/_14sdp"
+                        android:layout_marginTop="@dimen/_6sdp"
+                        android:background="@drawable/txn_pending_bg"
+                        android:fontFamily="@font/opensans_bold"
+                        android:gravity="center"
+                        android:text="Pending"
+                        android:textColor="@color/orange"
+                        android:textSize="@dimen/_7ssp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
@@ -181,8 +170,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_21sdp"
-                android:fontFamily="@font/opensans_bold"
-                android:text="Customer Service"
+                android:layout_marginTop="@dimen/_6sdp"
+                android:layout_marginBottom="@dimen/_8sdp"
+                android:fontFamily="@font/opensans_semibold"
+                android:gravity="center"
+                android:text="Contact Info"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
@@ -192,7 +184,7 @@
                 android:layout_marginStart="@dimen/_11sdp"
                 android:layout_marginTop="@dimen/_4sdp"
                 android:layout_marginEnd="@dimen/_11sdp"
-                android:layout_marginBottom="@dimen/_11sdp"
+                android:layout_marginBottom="@dimen/_130sdp"
                 app:cardCornerRadius="@dimen/_10sdp">
 
                 <LinearLayout
@@ -229,7 +221,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="@dimen/_7sdp"
                                 android:fontFamily="@font/opensans_semibold"
-                                android:text="support@firebbq.com"
+                                android:text="alison@gmail.com"
                                 android:textColor="@color/primary_black"
                                 android:textSize="@dimen/_12ssp" />
                         </LinearLayout>
@@ -292,80 +284,68 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_21sdp"
-                android:fontFamily="@font/opensans_bold"
-                android:text="Address"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
-
             <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_11sdp"
-                android:layout_marginTop="@dimen/_4sdp"
-                android:layout_marginEnd="@dimen/_11sdp"
-                android:layout_marginBottom="@dimen/_56sdp"
-                app:cardCornerRadius="@dimen/_10sdp">
+                android:id="@+id/nextCV"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_43sdp"
+                android:layout_marginStart="@dimen/_21sdp"
+                android:layout_marginEnd="@dimen/_21sdp"
+                app:cardBackgroundColor="@color/primary_green"
+                app:cardCornerRadius="@dimen/_22sdp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingStart="@dimen/_11sdp"
-                    android:paddingTop="@dimen/_11sdp"
-                    android:paddingEnd="@dimen/_11sdp">
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_13sdp"
+                    android:layout_marginBottom="@dimen/_13sdp"
+                    android:orientation="horizontal">
 
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/_1sdp"
-                                android:fontFamily="@font/opensans_regular"
-                                android:text="Address"
-                                android:textColor="@color/dark_grey"
-                                android:textSize="@dimen/_11ssp" />
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginBottom="@dimen/_7sdp"
-                                android:fontFamily="@font/opensans_semibold"
-                                android:text="3131 Camino Del Rio, San Diego,\nCA, 92108"
-                                android:textColor="@color/primary_black"
-                                android:textSize="@dimen/_12ssp" />
-                        </LinearLayout>
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:src="@drawable/ic_rightarrow" />
-                    </LinearLayout>
-
-                    <View
+                    <ImageView
                         android:layout_width="wrap_content"
-                        android:layout_height="@dimen/_1sdp"
-                        android:layout_marginBottom="@dimen/_17sdp"
-                        android:background="@color/light_gray"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/_20sdp"
+                        android:src="@drawable/ic_icon_awesome_pen" />
 
-                        />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_bold"
+                        android:text="Edit"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/_12ssp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_43sdp"
+                android:layout_marginStart="@dimen/_21sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_21sdp"
+                android:layout_marginBottom="@dimen/_20sdp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="@dimen/_22sdp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_13sdp"
+                    android:layout_marginBottom="@dimen/_13sdp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/opensans_bold"
+                        android:text="Cancel"
+                        android:textColor="@color/error_red"
+                        android:textSize="@dimen/_12ssp" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
