merchant transactions  and business debit card screens design

--- a/app/src/main/res/layout/activity_additional_benifitial_owners.xml
+++ b/app/src/main/res/layout/activity_additional_benifitial_owners.xml
@@ -195,7 +195,8 @@
                 android:layout_marginHorizontal="@dimen/_21sdp"
                 android:layout_marginTop="@dimen/_129sdp"
                 app:cardBackgroundColor="@color/bg_inactive"
-                app:cardCornerRadius="@dimen/_21sdp">
+                app:cardCornerRadius="@dimen/_21sdp"
+                tools:ignore="MissingClass">
 
                 <TextView
                     android:layout_width="wrap_content"
