--- a/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
@@ -43,7 +43,7 @@
 
         </LinearLayout>
 
-        <com.greenbox.coyni.utils.MaskEditText.widget.MaskEditText
+        <com.greenbox.coyni.utils.outline_et.CompanyOutLineBoxPhoneNumberEditText
             android:id="@+id/companypnET"
             android:layout_width="match_parent"
             android:layout_height="55dp"
