--- a/app/src/main/res/layout/activity_business_profile.xml
+++ b/app/src/main/res/layout/activity_business_profile.xml
@@ -217,7 +217,7 @@
                         android:paddingTop="@dimen/_11sdp">
 
                         <LinearLayout
-                            android:id="@+id/cpUserDetailsLL"
+                            android:id="@+id/business_UserDetailsLL"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@color/white"
