--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -337,7 +337,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="visible">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -431,6 +431,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/_10sdp"
                     android:orientation="vertical">
 
                     <TextView
@@ -483,6 +484,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/_10sdp"
                     android:orientation="vertical">
 
                     <TextView
@@ -535,6 +537,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
                     android:layout_weight="1"
+                    android:layout_marginEnd="@dimen/_10sdp"
                     android:orientation="vertical">
 
                     <TextView
