Business Account Screens & Validations

--- a/app/src/main/res/layout/activity_business_application_approved.xml
+++ b/app/src/main/res/layout/activity_business_application_approved.xml
@@ -18,7 +18,7 @@
         <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/additional_action_required"
+        android:src="@drawable/aditional"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/_88sdp"
         android:layout_marginBottom="@dimen/_14sdp"
