--- a/app/src/main/res/layout/activity_business_additonal_action_required.xml
+++ b/app/src/main/res/layout/activity_business_additonal_action_required.xml
@@ -409,8 +409,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/white"
-    android:layout_alignParentBottom="true"
-    >
+    android:layout_alignParentBottom="true">
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
